[package]
name = "rabbithole"
version = "0.1.0"
authors = ["Hiromitsu Oshiba <0x75960@chocola.tech>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
failure = "0.1.6"
reqwest = {version="0.10", features=["json"]}
serde = {version="1.0.104", features=["derive"]}
